Changes form input focus CSS to use box-shadow instead of outline to fix rectangular outline on iOS Safari

--- a/src/components/input-form.module.css
+++ b/src/components/input-form.module.css
@@ -18,9 +18,11 @@ h2 {
   font-size: 1rem;
   border: none;
   border-radius: 0.5rem;
+  box-shadow: 0 0 0 1px grey;
+  outline: none;
 }
 .form-inputs:focus {
-  outline: #449504 solid 3px;
+  box-shadow: 0 0 3px 2px #449504;
 }
 .add-asset-button {
   margin-bottom: 1rem;
